# nlp-playground

./: .gitignore  .pre-commit-config.yaml  README.md  compare_extractors.py  pyproject.toml  pyrightconfig.json
.claude/: persona.md  rules.md
.claude/skills/fix-nlp-issues/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  review.yaml
escoe-extractor/: README.md  pyproject.toml
escoe-extractor-assessment/: README.md  pyproject.toml
escoe-extractor-assessment/.claude/: skills.md
escoe-extractor-assessment/src/escoe_extractor_assessment/: __init__.py  __main__.py
escoe-extractor/src/escoe_extractor/: __init__.py  __main__.py
langextract/: README.md  pyproject.toml
langextract-assessment/: README.md  pyproject.toml
langextract-assessment/.claude/: skills.md
langextract-assessment/src/langextract_assessment/: __main__.py
langextract/src/langextract/: __init__.py  __main__.py
pydparser/: README.md  pyproject.toml
pydparser-assessment/: README.md  pyproject.toml
pydparser-assessment/.claude/: skills.md
pydparser-assessment/src/pydparser_assessment/: __init__.py  __main__.py
pydparser-assessment/tests/: test_extract.py
pydparser/.claude/: skills.md
pydparser/src/pydparser/: __init__.py  __main__.py
scripts/: README.md  agent_shim.py  clean-remote-branches.sh  update_compare_list.py
skills-extractor/: README.md  pyproject.toml
skills-extractor-assessment/: README.md  pyproject.toml
skills-extractor-assessment/.claude/: skills.md
skills-extractor-assessment/src/skills_extractor_assessment/: __init__.py  __main__.py
skills-extractor-assessment/tests/: __init__.py  test_extract.py
skills-extractor/src/skills_extractor/: __main__.py
spacy-assessment/: README.md  pyproject.toml
spacy-assessment/src/spacy_assessment/: __init__.py  __main__.py
spacy-assessment/tests/: test_extract.py
spacy-project/: README.md  pyproject.toml
spacy-project/.claude/: skills.md
spacy-project/src/spacy_project/: __init__.py  __main__.py
src/nlp_playground/: __init__.py
tests/: how_to_test.md
tests/data/: sample_resume.txt
