[project]
name = "nlp-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akai Kaede", email = "genko2@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.5.1",
]

[tool.uv.workspace]
members = [
    "pydparser-assessment",
    "skills-extractor-assessment",
    "spacy-assessment",
    "langextract-assessment",
    "escoe-extractor-assessment",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
