[project]
name = "nlp-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akai Kaede", email = "genko2@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.5.1",
]

[tool.uv.workspace]
members = [
    "skills-extractor-assessment",
    "spacy-assessment",
    "langextract-assessment",
    "escoe-extractor-assessment",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "ruff>=0.14.14",
]
