[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escoe-extractor-assessment"
version = "0.1.0"
description = "ESCoE Skills Extractor integration for NLP playground."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["escoe_extractor_assessment"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9.0.0",
]
