[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-assessment"
version = "0.1.0"
description = "Language extraction utilities for NLP playground."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["langextract_assessment"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9.0.0",
]
