[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-extractor-assessment"
version = "0.1.0"
description = "Skill extraction tools for NLP playground."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ojd-daps-skills>=3.0.0",
    "skillner>=1.0.3",
    "spacy==3.7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["skills_extractor_assessment"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9.0.0"
]
