[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-assessment"
version = "0.1.0"
description = "spaCy-based NLP workflows for NLP playground."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spacy==3.7.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spacy_assessment"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
